# BWAIShotgun

./: .gitignore  Cargo.toml  Makefile  README.md  SNP_DirectIP.snp  appveyor.yml  build.bat  game.toml  shotgun.toml
.github/workflows/: rust.yml
bots/NitekatT/: bot.toml
bots/ZergHell/: bot.toml
bots/template/: bot.toml
game_table/: Cargo.toml
game_table/.cargo/: config.toml
game_table/src/: game_table.rs  lib.rs  main.rs
src/: botsetup.rs  bwapi.rs  bwheadless.rs  cli.rs  injectory.rs  java_setup.rs  main.rs  sandbox.rs  setup.rs  starcraft_setup.rs  wrapper.rs
tm/: Custom Tournament Modules  Where are these from
